@@ -1,3 +1,7 @@
+2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_api.php: cleaned source code style.
+
 2014-01-20  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* mobile/include/user.class.php,
